# rAMQP

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  SECURITY.md  broker.md  ramqp-client-plan.md  working-plan.md
.github/: PULL_REQUEST_TEMPLATE.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
bench-compare/: Cargo.toml  README.md
bench-compare/tests/: fe2o3_interop.rs
bench-compare/tuned/: rabbitmq.conf  run.sh
benches/: codec.rs
examples/: soak.rs  stress.rs
ramqp/: Cargo.toml
ramqp-broker/: Cargo.toml  README.md
ramqp-broker/examples/: chaos.rs  loadgen.rs  partition_probe.rs  recover.rs  robust.rs
ramqp-broker/scripts/: 00-gates.sh  10-suite.sh  20-soak.sh  30-chaos.sh  40-interop.sh  50-robust.sh  60-fuzz.sh  README.md  analyze_soak.py  bench-baseline.json  bench.sh  bench_stats.py  cov.sh  lib.sh  run-all.sh
ramqp-broker/src/: auth.rs  broker.rs  config.rs  connection.rs  dispatch.rs  durable.rs  lib.rs  mgmt.rs  policy.rs  proxy.rs  queue.rs  quorum.rs  registry.rs  serde_bin.rs  store.rs  txn.rs
ramqp-broker/src/cluster/: bootstrap.rs  fabric.rs  meta.rs  mod.rs  network.rs  node.rs  paging.rs  queue_group.rs  store.rs  tcp.rs
ramqp-broker/tests/: adversarial.rs  auth.rs  blast.rs  cluster.rs  conformance.rs  durable.rs  jms_interop.rs  mgmt.rs  policies.rs  produce_consume.rs  quorum_queue.rs  smoke.rs  transactions.rs
ramqp-broker/tests/harness/: client.rs  loopback.rs  mod.rs  raw_peer.rs
ramqp-broker/tests/interop/: README.md
ramqp-broker/tests/interop/jms/: JmsInterop.java  run.sh
ramqp-broker/tests/interop/proton/: proton_interop.py  run.sh
ramqp-broker/tests/partition/: README.md  run.sh
ramqp-core/: Cargo.toml  README.md
ramqp-core/fuzz/: Cargo.toml
ramqp-core/fuzz/fuzz_targets/: decode_frame.rs  value.rs
ramqp-core/src/: error.rs  ids.rs  lib.rs
ramqp-core/src/codec/: encode.rs  mod.rs  primitives.rs  value.rs
ramqp-core/src/config/: mod.rs
ramqp-core/src/connection/: heartbeat.rs  mod.rs  negotiate.rs
ramqp-core/src/link/: credit.rs  receiver.rs  sender.rs  settlement.rs
ramqp-core/src/observe/: event.rs  metrics.rs  wiring.rs
ramqp-core/src/proto/: mod.rs
ramqp-core/src/sasl/: mod.rs  scram.rs  server.rs
ramqp-core/src/session/: mod.rs  registry.rs  state.rs  window.rs
ramqp-core/src/transport/: header.rs  mod.rs
ramqp-core/src/txn/: mod.rs
ramqp-core/src/types/: definitions.rs
ramqp/benches/: codec.rs
ramqp/examples/: produce_consume.rs  soak.rs  throughput.rs
ramqp/src/: lib.rs
ramqp/src/api/: client.rs  connection.rs  consumer.rs  lifecycle.rs  producer.rs  session.rs
ramqp/src/codec/: decode.rs  described.rs
ramqp/src/connection/: driver.rs  mod.rs
ramqp/src/resilience/: mod.rs  pool.rs  supervisor.rs  transparent.rs
ramqp/src/sasl/: mod.rs
ramqp/src/transport/: mod.rs  tls.rs
ramqp/src/txn/: mod.rs
ramqp/tests/: broker.rs  public_api.rs  ws.rs
ramqp/tests/docker/: rabbitmq-tls.conf
src/: error.rs  lib.rs
src/api/: client.rs  connection.rs  consumer.rs  mod.rs  producer.rs  session.rs
src/codec/: decode.rs  described.rs  encode.rs  mod.rs  value.rs
src/config/: mod.rs
src/connection/: driver.rs  heartbeat.rs  mux.rs  negotiate.rs
src/link/: delivery.rs  mod.rs  receiver.rs  resume.rs  sender.rs  settlement.rs
src/observe/: event.rs  metrics.rs  mod.rs
src/proto/: mod.rs
src/resilience/: mod.rs  pool.rs  supervisor.rs  transparent.rs
src/sasl/: mod.rs
src/session/: state.rs  window.rs
src/transport/: frame.rs  header.rs  mod.rs  tls.rs  ws.rs
src/txn/: mod.rs
src/types/: messaging.rs  mod.rs  performatives.rs  sasl.rs
tests/: broker.rs  tls.rs  ws.rs
tests/docker/: README.md  gen-certs.sh
