[package]
name = "ramqp"
version = "0.1.4"
edition = "2024"
rust-version = "1.85"
description = "A from-scratch, clean-room AMQP 1.0 client."
license = "MIT"
repository = "https://github.com/ZerosAndOnesLLC/rAMQP"
keywords = ["amqp", "amqp1", "messaging", "tokio", "async"]
categories = ["network-programming", "asynchronous"]

[lib]
name = "ramqp"
path = "src/lib.rs"

[dependencies]
bytes = "1"
thiserror = "2"
ordered-float = "5"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["sync", "io-util", "net", "rt", "macros", "time"] }
futures-core = "0.3"
futures-util = "0.3"
pin-project-lite = "0.2"
slab = "0.4"
url = "2"
tracing = "0.1"

[features]
default = []
# TLS backends
rustls = ["dep:tokio-rustls", "dep:rustls", "dep:webpki-roots"]
native-tls = ["dep:tokio-native-tls", "dep:native-tls"]
# WebSocket transport
ws = ["dep:tokio-tungstenite", "dep:http"]
# SASL SCRAM mechanisms
scram = ["dep:hmac", "dep:sha1", "dep:sha2", "dep:pbkdf2", "dep:base64", "dep:stringprep"]
# Transaction coordinator (clean-room, spec part 4)
transaction = []

[dependencies.tokio-rustls]
version = "0.26"
optional = true
default-features = false
features = ["ring", "tls12"]

[dependencies.rustls]
version = "0.23"
optional = true
default-features = false
features = ["ring", "std", "tls12"]

[dependencies.webpki-roots]
version = "0.26"
optional = true

[dependencies.tokio-native-tls]
version = "0.3"
optional = true

[dependencies.native-tls]
version = "0.2"
optional = true

[dependencies.tokio-tungstenite]
version = "0.24"
optional = true

[dependencies.http]
version = "1"
optional = true

[dependencies.hmac]
version = "0.12"
optional = true

[dependencies.sha1]
version = "0.10"
optional = true

[dependencies.sha2]
version = "0.10"
optional = true

[dependencies.pbkdf2]
version = "0.12"
optional = true
default-features = false
features = ["hmac"]

[dependencies.base64]
version = "0.22"
optional = true

[dependencies.stringprep]
version = "0.1"
optional = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
criterion = "0.5"

[[bench]]
name = "codec"
harness = false

[profile.bench]
debug = true
