[package]
name = "ramqp-broker"
version = "0.5.0"
edition = "2024"
description = "A performance-first, highly-available AMQP 1.0 broker in Rust (in development)."
license = "MIT"
repository = "https://github.com/ZerosAndOnesLLC/rAMQP"
keywords = ["amqp", "amqp1", "broker", "messaging", "async"]
categories = ["network-programming", "asynchronous"]

[dependencies]
ramqp-core = { path = "../ramqp-core", version = "0.2.1" }
bytes = { version = "1", features = ["serde"] }
futures-util = "0.3"
tokio = { version = "1", features = ["sync", "io-util", "net", "rt", "rt-multi-thread", "macros", "time", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
openraft = { version = "0.9.24", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
bincode = "1"
redb = { version = "4", optional = true }

[dev-dependencies]
# The published client, used as the interop peer for loopback tests.
ramqp = { path = "../ramqp" }
tempfile = "3.27.0"
tokio = { version = "1", features = ["full", "test-util"] }

[features]
# Durable-local queues (`/durable/<name>`) backed by the redb embedded store.
store-redb = ["dep:redb"]
