[package]
name = "ramqp"
version = "0.8.0"
edition = "2024"
rust-version = "1.85"
description = "Async AMQP 1.0 client for Rust on tokio — connects to RabbitMQ 4.x, ActiveMQ Artemis, and other AMQP 1.0 brokers."
license = "MIT"
repository = "https://github.com/ZerosAndOnesLLC/rAMQP"
keywords = ["amqp", "amqp1", "messaging", "tokio", "async"]
categories = ["network-programming", "asynchronous"]
readme = "../README.md"

# Document every feature-gated API (TLS / WebSocket / SCRAM / transactions) on docs.rs.
[package.metadata.docs.rs]
all-features = true

[lib]
name = "ramqp"
path = "src/lib.rs"

[dependencies]
ramqp-core = { path = "../ramqp-core", version = "0.1.0" }
bytes = "1"
thiserror = "2"
ordered-float = "5"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["sync", "io-util", "net", "rt", "macros", "time"] }
futures-core = "0.3"
futures-util = "0.3"
pin-project-lite = "0.2"
slab = "0.4"
url = "2"
tracing = "0.1"

[features]
default = []
# TLS backends
rustls = ["dep:tokio-rustls", "dep:rustls", "dep:webpki-roots", "dep:rustls-pemfile"]
native-tls = ["dep:tokio-native-tls", "dep:native-tls"]
# WebSocket transport
ws = ["dep:tokio-tungstenite", "dep:http"]
# SASL SCRAM mechanisms (math lives in ramqp-core; base64 used by the client flow)
scram = ["ramqp-core/scram", "dep:base64"]
# Transaction controller (wire types live in ramqp-core)
transaction = ["ramqp-core/transaction"]

[dependencies.tokio-rustls]
version = "0.26"
optional = true
default-features = false
features = ["ring", "tls12"]

[dependencies.rustls]
version = "0.23"
optional = true
default-features = false
features = ["ring", "std", "tls12"]

[dependencies.webpki-roots]
version = "1"
optional = true

[dependencies.rustls-pemfile]
version = "2"
optional = true

[dependencies.tokio-native-tls]
version = "0.3"
optional = true

[dependencies.native-tls]
version = "0.2"
optional = true

[dependencies.tokio-tungstenite]
version = "0.29"
optional = true

[dependencies.http]
version = "1"
optional = true

[dependencies.base64]
version = "0.22"
optional = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
criterion = "0.8"
# Server side of the WebSocket bridge used by the live `ws` interop test.
tokio-tungstenite = "0.29"

[[bench]]
name = "codec"
harness = false
